Fix: Positioning of undo/redo drawing buttons in header on mobile

--- a/src/Annotator.scss
+++ b/src/Annotator.scss
@@ -62,6 +62,10 @@
             vertical-align: middle;
         }
     }
+
+    @media #{$mobile} {
+        margin: 0;
+    }
 }
 
 //------------------------------------------------------------------------------
